# wireguard_vpn_cli

./: README.md  pyproject.toml
vpnctl/: bot.py  cli.py  emailer.py  fallback.py  remote.py  service.py  wireguard.py
vpnctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
