[project]
name = "vpnctl"
version = "0.1.0"
description = "Local WireGuard VPS manager with a Telegram bot"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
bot = ["aiogram>=3.0,<4.0"]

[project.scripts]
vpnctl = "vpnctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
